Fix document overflow in new media popup

--- a/src/scss/partials/popups/_mediaAttacher.scss
+++ b/src/scss/partials/popups/_mediaAttacher.scss
@@ -159,7 +159,6 @@
     max-width: 100%;
     overflow: hidden;
     cursor: default;
-    padding-left: 3.75rem;
     height: 4.5rem;
 
     &-name {
